--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,21 @@
 h1 {
-    color: blue;
-
+    color: rgb(251, 255, 253);
 }
+
+h2 {
+    color: pink;
+}
+
+body {
+    background-color: rgb(255, 156, 172);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+a {
+ text-decoration: none;
+ color:rgb(255, 255, 255);
+}
+
+
